--- a/annual-leave.html
+++ b/annual-leave.html
@@ -233,6 +233,33 @@
                                                 </div>
                                             </div>
                                             <div class="mb-3 row">
+                                                <label for="name" class="col-sm-2 col-form-label"></label>
+                                                <div class="col-sm-6 col-md-6">
+                                                    <div class="d-flex p-3" style="background-color: rgb(255, 239, 212);">
+                                                        <div>
+                                                            <svg width="32" style="fill: #E5801A;" height="32" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" class="ms-4 fill-warning-500"><path d="M16 30C8.275 30 2 23.725 2 16C2 8.275 8.275 2 16 2C23.725 2 30 8.275 30 16C30 23.725 23.725 30 16 30ZM16 4C9.387 4 4 9.387 4 16C4 22.613 9.387 28 16 28C22.613 28 28 22.613 28 16C28 9.387 22.613 4 16 4Z"></path><path d="M19 22H17V13C17 12.45 16.55 12 16 12H13C12.45 12 12 12.45 12 13C12 13.55 12.45 14 13 14H15V22H13C12.45 22 12 22.45 12 23C12 23.55 12.45 24 13 24H19C19.55 24 20 23.55 20 23C20 22.45 19.55 22 19 22Z"></path><path d="M17 9C17 9.552 16.552 10 16 10C15.448 10 15 9.552 15 9C15 8.448 15.448 8 16 8C16.552 8 17 8.448 17 9Z"></path></svg>
+                                                        </div>
+                                                        <div class="ms-3">
+                                                            Existing absences fall within this date range. Check <a href="./personal-detail.html">your profile</a> for more details.
+                                                            <ul>
+                                                                <li><span class="fw-bolder">Annual Leave:</span> Thu, 26th Jan - Sat, 28th Jan</li>
+                                                                <li><span class="fw-bolder">Annual Leave:</span> Sat, 28th Jan - Tue, 31st Jan</li>
+                                                            </ul>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="mb-3 row">
+                                                <label for="name" class="col-sm-2 col-form-label">Hours deducted</label>
+                                                <div class="col-md-6">
+                                                    <div class="col-sm-2 col-md-2">
+                                                        <input type="time" placeholder="Select date" class="form-control"
+                                                            id="staticEmail" value="">
+                                                    </div>
+                                                    <p class="mt-3">michael's allowance is -12 hours with an average day of 0 hours. We have estimated that 0 hours need to be deducted from the allowance but you can amend this.</p>
+                                                </div>
+                                            </div>
+                                            <div class="mb-3 row">
                                                 <label for="select" id="textarea" class="col-sm-2 col-form-label">Notes</label>
                                                 <div class="col-sm-3 col-md-3">
                                                     <textarea name="" placeholder="Notes regarding the absence" id="textarea" cols="10" class="form-control"  rows="3"></textarea>
