--- a/calendar.html
+++ b/calendar.html
@@ -79,8 +79,17 @@
                     </li>
                   </ul>
                   <div class="tab-content tabs-info-content-space-bar" id="myTabContent">
-                    <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-                      <div id='calendar'></div>
+                    <div class="tab-pane fade show active calendar" id="home" role="tabpanel" aria-labelledby="home-tab">
+                      <div class="all_leave_with_color d-flex align-items-center my-3">
+                        <span class="annual leave"></span>Annual leave
+                        <span class="sick leave"></span>Sickness 
+                        <span class="late leave"></span>Lateness
+                        <span class="toil leave"></span>TOIL
+                        <span class="other_leave leave"></span>Other absence
+                        <span class="pending_leave leave"></span>Pending
+                      </div>
+                      <div id='calendar'>
+                      </div>
                     </div>
 
                     <div class="tab-pane fade content-info-title" id="profile" role="tabpanel"
@@ -94,9 +103,38 @@
                       </select>
                       <h2>Pending requests (0)</h2>
                       <p>Everything is up to date, have a cuppa!</p>
+                      <div class="row">
+                        <div class="col-md-6 my-2">
+                          <div class="pending_rquest">
+                            <div class="parent_div">
+                              <div class="d-flex justify-content-between">
+                                <div class="d-flex flex-column align-items-center justify-content-center col-md-2 date_of_shift_rota">
+                                  <div class="short_name">KG</div>
+                                </div>
+                                <div class="col-md-10 p-2">
+                                  <div class="d-flex justify-content-between align-items-center">
+                                    <div>
+                                      <a href="./timeline-view.html" class="rota_shift_employee_name">Komal Gautam</a>
+                                    </div>
+                                    <div>
+                                      <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModalUnapproved" class="unapproved_btn">Unapproved</button>
+                                    </div>
+                                        <!-- Button trigger modal -->                                 
+                                  </div>
+                                  <div class="d-flex flex-column">
+                                    <div class="start_end_date"><strong>Start:&nbsp;</strong>23/12/2020<strong>&nbsp;&nbsp;&nbsp;End:&nbsp;</strong>23/12/1220</div>
+                                    <div class="pe-3">Leave for urgent work</div>
+                                    <div class="order-1">
+                                    </div>
+                                </div>
+                              </div>
+                            </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
                     </div>
                     <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
-
                       <h3>Mandatory leave</h3>
                       <p>Dates your employees have to take as leave such as shutdown periods, local bank holidays etc.
                         Once set, it will appear on employee profile as Mandatory time off as well as in the calendar.
@@ -112,6 +150,25 @@
         </div>
       </div>
   </section>
+  <div class="modal fade unapproved_modal_content" id="exampleModalUnapproved" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" style="max-width: 50vw;">
+        <div class="modal-content content-modal">
+            <div class="modal-header modal-head">
+                <h5 class="modal-title" id="exampleModalLabel"><span>Are you sure you want to approve this leave?</span></h5>
+                <button type="button" class=" close-btn" data-bs-dismiss="modal" aria-label="Close"><i class="fa fa-times" aria-hidden="true"></i></button>
+            </div>
+            <div class="modal-body">
+                <div class="col-md-12">
+                    <p>This will show in the calendar with perticular date. Once approved, the notification will be sent to Komal Gautam.</p>
+                </div>
+            </div>
+            <div class="modal-footer justify-content-between">
+                <button type="button" class="close-btn" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="approve-btn">Approve</button>
+            </div>
+        </div>
+    </div>
+</div>
   <!-- Main Wrape Section End Here -->
   <!-- ============ Bootstrap Main ===================-->
   <script src="js/bootstrap.bundle.min.js"></script>
