--- a/rota-planner.html
+++ b/rota-planner.html
@@ -239,6 +239,9 @@
                           <div class="col-lg-3 col-md-3">
                             <input type="text" class="form-control form-select" placeholder="Rota name...">
                           </div>
+                          <div class="col-md-3">
+                            <button type="button" class="filter_btn">Clear all filter</button>
+                          </div>
                           <div class="row">
                             <div class="col-md-3 col-lg-3">
                               <select name="" class="form-select fotm-control" id="">
@@ -328,8 +331,7 @@
                                       </ul>
                                   </div>
                                 </div>
-                                    <!-- Button trigger modal -->
-                                 
+                                    <!-- Button trigger modal -->                                 
                               </div>
                               <div class="d-flex">
                                 <div class="pe-3">Total: 0 hrs 0 mins (Incl. breaks)</div>
@@ -547,16 +549,30 @@
                       <form class="active-rots-slt-from">
                         <div class="row">
                           <div class="col-lg-9">
-                            <h3>Active rotas</h3>
+                            <h3>Old rotas</h3>
                           </div>
                           <div class="col-lg-3 col-md-3">
                             <h4><a href="#">Create new Rota</a></h4>
                           </div>
-                          <div class="col-lg-8 col-md-8">
+                          <div class="col-lg-3 col-md-3">
                             <input type="date" placeholder="Select range..." class="form-control">
                           </div>
-                          <div class="col-lg-4 col-md-4">
+                          <div class="col-lg-3 col-md-3">
                             <input type="text" class="form-control" placeholder="Rota name...">
+                          </div>
+                          <div class="col-md-3">
+                            <button type="button" class="filter_btn">Clear all filter</button>
+                          </div>
+                          <div class="row">
+                            <div class="col-md-3 col-lg-3">
+                              <select name="" class="form-select fotm-control" id="">
+                                <option value="">Name (A-Z)</option>
+                                <option value="">Name (Z-A )</option>
+                                <option value="">Start date (Newest first)</option>
+                                <option value="">Start date (Oldest first)</option>
+                              </select>
+                            </div>
+                            <p class="mt-2">Rotas which have ended are shown here.</p>
                           </div>
                         </div>
                       </form>
