--- a/annual-leave.html
+++ b/annual-leave.html
@@ -100,7 +100,7 @@
                                                 <label for="name" class="col-sm-2 col-form-label">Employee</label>
                                                 <div class="col-sm-3 col-md-3 position-rel">
                                                     <div class="position-rel">
-                                                        <input type="text" onclick="showSelect()" placeholder="Search or select employee" class="form-control"
+                                                        <input type="text" onclick="showSelect()" placeholder="Search or select employee" class="form-control select_employee_btn"
                                                             id="staticEmail" value="">
                                                             <span class="position-abs"><i class="fa fa-search" aria-hidden="true"></i></span>
                                                             <ul class="customSelect" id="selectDropdown">
@@ -281,13 +281,23 @@
         </div>
     </section>
     <!-- Main Wrape Section End Here -->
-    <!-- ===================================== 
-Bootstrap Main
-========================================-->
+    <!-- ======================= Bootstrap Main ===============-->
     <script src="js/bootstrap.bundle.min.js"></script>
     <script>
         function showSelect() {
             document.getElementById('selectDropdown').classList.toggle('show_select');
+        }
+        window.onclick = function(event) {
+        if (!event.target.matches('.select_employee_btn')) {
+            var dropdowns = document.getElementsByClassName("customSelect");
+            var i;
+            for (i = 0; i < dropdowns.length; i++) {
+            var openDropdown = dropdowns[i];
+            if (openDropdown.classList.contains('show')) {
+                openDropdown.classList.remove('show');
+            }
+            }
+        }
         }
     </script>
 </body>
